Apply patch by Alan Pater

BUG: 313203